--- a/app/templates/tournament_details.html
+++ b/app/templates/tournament_details.html
@@ -141,7 +141,7 @@
             <ol class="space-y-3 list-decimal list-inside">
               <li><span class="text-red-300">Random roll</span> determines first pick order</li>
               <li>Players <span class="text-red-300">alternate picks and bans</span> for 3 rounds each</li>
-              <li>Total of <span class="text-red-300">6 maps picked</span> for the match</li>
+              <li>Total of <span class="text-red-300">6 maps picked</span> for the match, after each pick the map is played.</li>
               <li>Remaining maps are discarded</li>
             </ol>
           </div>
